--- a/.github/workflows/test_automaiton.yml
+++ b/.github/workflows/test_automaiton.yml
@@ -37,5 +37,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Run Playwright tests in subfolder
-        working-directory: ../Playwright
+        working-directory: Playwright
         run: npx playwright test --baseURL='QA'
