--- a/.github/workflows/test_automation.yml
+++ b/.github/workflows/test_automation.yml
@@ -18,7 +18,7 @@ on:
         default: 'App logic'
         type: choice
         options:
-          - cromium
+          - chromium
           - firefox
           - webkit
 
