--- a/.github/workflows/test_automation.yml
+++ b/.github/workflows/test_automation.yml
@@ -78,6 +78,7 @@ jobs:
 
       - name: Run Playwright tests
         env:
+          CI: true
           BASE_URL: ${{ github.event.inputs.environment}}
           projects: ${{ github.event.inputs.browsers }}
         run: yarn playwright test
