--- a/.github/workflows/test_automation.yml
+++ b/.github/workflows/test_automation.yml
@@ -13,9 +13,9 @@ on:
           - Integration
 
       browsers:
-        description: 'Select automation type'
+        description: 'Select browser'
         required: true
-        default: 'App logic'
+        default: 'chromium'
         type: choice
         options:
           - chromium
@@ -57,10 +57,6 @@ jobs:
         run: yarn install
         working-directory: ./Playwright
 
-      - name: Set up Playwright
-        run: yarn playwright install 
-        working-directory: ./Playwright
-
       - name: Install Playwright Browsers
         run: |
           case "${{ github.event.inputs.browsers }}" in
@@ -83,7 +79,7 @@ jobs:
       - name: Run Playwright tests
         env:
           CI: true
-          BASE_URL: ${{ github.event.inputs.environment}}
+          BASE_URL: ${{ github.event.inputs.environment }}
           projects: ${{ github.event.inputs.browsers }}
         run: yarn playwright test
         working-directory: ./Playwright
