--- a/.github/workflows/test_automation.yml
+++ b/.github/workflows/test_automation.yml
@@ -80,6 +80,5 @@ jobs:
         env:
           CI: true
           BASE_URL: ${{ github.event.inputs.environment }}
-          projects: ${{ github.event.inputs.browsers }}
-        run: yarn playwright test
+        run: yarn playwright test --project=${{ github.event.inputs.browsers }}
         working-directory: ./Playwright
