--- a/Playwright/package.json
+++ b/Playwright/package.json
@@ -6,10 +6,9 @@
   "author": "Vlastimil Matějka <vlastimil.matejka@actumdigital.com>",
   "license": "MIT",
   "devDependencies": {
-    "@playwright/test": "^1.53.2",
     "@types/node": "^24.0.10",
     "dotenv": "^17.0.1",
-    "playwright": "^1.53.2",
+    "playwright": "1.53.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
@@ -17,7 +16,6 @@
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "dependencies": {
     "add": "^2.0.6",
-    "process-env": "^2.0.2",
-    "playwright": "1.53.0"
+    "process-env": "^2.0.2"
   }
 }
