--- a/Playwright/package.json
+++ b/Playwright/package.json
@@ -6,9 +6,10 @@
   "author": "Vlastimil Matějka <vlastimil.matejka@actumdigital.com>",
   "license": "MIT",
   "devDependencies": {
+    "@playwright/test": "^1.53.0",
     "@types/node": "^24.0.10",
     "dotenv": "^17.0.1",
-    "playwright": "1.53.0",
+    "playwright": "^1.53.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
