--- a/.github/workflows/test_automation.yml
+++ b/.github/workflows/test_automation.yml
@@ -76,5 +76,5 @@ jobs:
           CI: true
           BASE_URL: ${{ github.event.inputs.environment }}
           PLAYWRIGHT_BROWSERS_PATH: '0'    # <-- Use browsers from the Docker image
-        run: yarn playwright test --project=${{ github.event.inputs.browsers }}
+        run: npx playwright test --project=${{ github.event.inputs.browsers }}
         working-directory: ./Playwright
