changing docker image

--- a/.github/workflows/test_automation.yml
+++ b/.github/workflows/test_automation.yml
@@ -47,7 +47,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Run Playwright tests
     container:
-      image: mcr.microsoft.com/playwright:v1.53.2-noble
+      image: mcr.microsoft.com/playwright:v1.53.2
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
