trying to adjust imports to fix pipeline issue

--- a/.github/workflows/test_automation.yml
+++ b/.github/workflows/test_automation.yml
@@ -52,24 +52,24 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Install Playwright Browsers
-        run: |
-          case "${{ github.event.inputs.browsers }}" in
-            chromium)
-              yarn playwright install --with-deps chromium
-              ;;
-            firefox)
-              yarn playwright install --with-deps firefox
-              ;;
-            webkit)
-              yarn playwright install --with-deps webkit
-              ;;
-            *)
-              echo "Invalid browser selection: ${{ github.event.inputs.browsers }}"
-              exit 1
-              ;;
-          esac
-        working-directory: ./Playwright
+      # - name: Install Playwright Browsers
+      #   run: |
+      #     case "${{ github.event.inputs.browsers }}" in
+      #       chromium)
+      #         yarn playwright install --with-deps chromium
+      #         ;;
+      #       firefox)
+      #         yarn playwright install --with-deps firefox
+      #         ;;
+      #       webkit)
+      #         yarn playwright install --with-deps webkit
+      #         ;;
+      #       *)
+      #         echo "Invalid browser selection: ${{ github.event.inputs.browsers }}"
+      #         exit 1
+      #         ;;
+      #     esac
+      #   working-directory: ./Playwright
 
       - name: Install dependencies with Yarn
         run: yarn install --ignore-scripts
