--- a/.github/workflows/test_automation.yml
+++ b/.github/workflows/test_automation.yml
@@ -74,6 +74,13 @@ jobs:
       - name: Install dependencies with Yarn
         run: yarn install --ignore-scripts
         working-directory: ./Playwright
+      
+      - name: environment info
+        run: |
+          echo "Checking Playwright info..."
+          yarn playwright --version
+          echo "PLAYWRIGHT_BROWSERS_PATH=$PLAYWRIGHT_BROWSERS_PATH"
+          ls -la node_modules/playwright-core/.local-browsers || true
 
       - name: Run Playwright tests
         env:
