--- a/.github/workflows/test_automation.yml
+++ b/.github/workflows/test_automation.yml
@@ -89,5 +89,5 @@ jobs:
         env:
           CI: true
           BASE_URL: ${{ github.event.inputs.environment }}
-        run: yarn playwright test --project=${{ github.event.inputs.browsers }}
+        run: npx playwright test --project=${{ github.event.inputs.browsers }}
         working-directory: ./Playwright
