--- a/.github/workflows/test_automation.yml
+++ b/.github/workflows/test_automation.yml
@@ -47,9 +47,9 @@ jobs:
     runs-on: ubuntu-latest
     name: Run Playwright tests
     container:
-      image: mcr.microsoft.com/playwright:v1.53.2,
+      image: mcr.microsoft.com/playwright:v1.53.2
       env:
-        PLAYWRIGHT_BROWSERS_PATH: '0'  
+        PLAYWRIGHT_BROWSERS_PATH: '0'
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -89,5 +89,5 @@ jobs:
         env:
           CI: true
           BASE_URL: ${{ github.event.inputs.environment }}
-        run: npx playwright test --project=${{ github.event.inputs.browsers }}
+        run: yarn playwright test --project=${{ github.event.inputs.browsers }}
         working-directory: ./Playwright
