--- a/.github/workflows/test_automation.yml
+++ b/.github/workflows/test_automation.yml
@@ -45,40 +45,20 @@ on:
 jobs:
   test_automation:
     runs-on: ubuntu-latest
-    name: Run Playwright tests
     container:
       image: mcr.microsoft.com/playwright:v1.53.2
       env:
-        PLAYWRIGHT_BROWSERS_PATH: '0'
+        PLAYWRIGHT_BROWSERS_PATH: '0'  # ✅ this is critical
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      # - name: Install Playwright Browsers
-      #   run: |
-      #     case "${{ github.event.inputs.browsers }}" in
-      #       chromium)
-      #         yarn playwright install --with-deps chromium
-      #         ;;
-      #       firefox)
-      #         yarn playwright install --with-deps firefox
-      #         ;;
-      #       webkit)
-      #         yarn playwright install --with-deps webkit
-      #         ;;
-      #       *)
-      #         echo "Invalid browser selection: ${{ github.event.inputs.browsers }}"
-      #         exit 1
-      #         ;;
-      #     esac
-      #   working-directory: ./Playwright
-
       - name: Install dependencies with Yarn
         run: yarn install --ignore-scripts
         working-directory: ./Playwright
-      
-      - name: environment info
-        run:
+
+      - name: Debug Playwright env
+        run: |
           echo "Checking Playwright info..."
           yarn playwright --version
           echo "PLAYWRIGHT_BROWSERS_PATH=$PLAYWRIGHT_BROWSERS_PATH"
@@ -89,5 +69,5 @@ jobs:
         env:
           CI: true
           BASE_URL: ${{ github.event.inputs.environment }}
-        run: npx playwright test --project=${{ github.event.inputs.browsers }}
+        run: yarn playwright test --project=${{ github.event.inputs.browsers }}
         working-directory: ./Playwright
