--- a/.github/workflows/test_automation.yml
+++ b/.github/workflows/test_automation.yml
@@ -62,7 +62,7 @@ jobs:
         env:
           CI: true
           BASE_URL: ${{ github.event.inputs.environment }}
-        run: yarn playwright test --project=${{ github.event.inputs.browsers }}
+        run: yarn playwright test --project=${{ github.event.inputs.browsers }} --headed
         working-directory: ./Playwright
 
   Integration_tests:
