--- a/.github/workflows/test_automation.yml
+++ b/.github/workflows/test_automation.yml
@@ -65,6 +65,18 @@ jobs:
         run: yarn playwright test --project=${{ github.event.inputs.browsers }}
         working-directory: ./Playwright
 
+      - name: Generate HTML report
+        if: always()
+        run: yarn playwright show-report
+        working-directory: ./Playwright
+
+      - name: Upload Playwright HTML report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-html-report
+          path: ./Playwright/playwright-report
+
   Integration_tests:
     if: (github.event.inputs.automation_type == 'Integration')
     runs-on: ubuntu-latest
