--- a/.github/workflows/test_automation.yml
+++ b/.github/workflows/test_automation.yml
@@ -11,6 +11,7 @@ on:
         options:
           - App logic
           - Integration
+          - Accessibility
 
       browsers:
         description: 'Select browser'
@@ -65,9 +66,9 @@ jobs:
           BASE_URL: ${{ github.event.inputs.environment }}
         run: |
           if [[ "${{ github.event.inputs.scope }}" == "all" ]]; then
-            yarn playwright test --project=${{ github.event.inputs.browsers }}
+            yarn playwright test tests/e2e --project=${{ github.event.inputs.browsers }}
           else
-            yarn playwright test --project=${{ github.event.inputs.browsers }} --grep=@${{ github.event.inputs.scope }}
+            yarn playwright test tests/e2e --project=${{ github.event.inputs.browsers }} --grep=@${{ github.event.inputs.scope }}
           fi
         working-directory: ./Playwright
 
@@ -96,3 +97,39 @@ jobs:
       - name: Run Playwright tests
         run: yarn playwright test
         working-directory: ./Integration
+
+      - name: Upload Playwright HTML report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-html-integration-report
+          path: ./Integration/playwright-report
+
+  Accessibility_tests:
+    if: (github.event.inputs.automation_type == 'Accessibility')
+    runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/playwright:v1.54.1
+      env:
+        PLAYWRIGHT_BROWSERS_PATH: /ms-playwright
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Install dependencies with Yarn
+        run: yarn install --ignore-scripts
+        working-directory: ./Playwright
+      
+      - name: Run Playwright accessibility tests
+        env:
+          CI: true
+          BASE_URL: ${{ github.event.inputs.environment }}
+        run: yarn playwright test tests/accessibility --project=${{ github.event.inputs.browsers }}
+        working-directory: ./Playwright
+      
+      - name: Upload Playwright accessibility HTML report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-html-accessibility-report
+          path: ./Playwright/playwright-report
